Minor bug fixes 🐛
- Disable buttons while the connection hasn't been established
- Remove redundant console logs

TextOptions.jsx
- Add copy code button

App.jsx
- Disallow sending empty messages
- can't resize the message textarea now
- add in custom scrollbar for to handle vetical oveflow

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0 auto;
+  padding: 1em;
 }
 
 .text-options {
@@ -120,19 +121,22 @@ body {
 
 .remote-peer-display {
   margin-top: 1em;
-  display: flex;
+  display: flex;   
 }
 
 /* Chat Section */
-
+/* FIXME Chat oveflow with large number of messages */
 .sidebar {
-  display: flex;
   flex-direction: column;
+  margin-left: 1em;
+  height: 100%;
+  max-height: 100%;
 }
 
 .file-input-container {
   margin-bottom: 1em;
   max-height: 20%;
+  flex: 1;
 }
 
 .send-all {
@@ -140,10 +144,10 @@ body {
 }
 
 .chat {
-  display: flex;
   flex-direction: column;
-  height: 100%;
+  flex: 3;
   max-width: 500px;
+  margin-top: auto;
 }
 
 #msg-history-label {
@@ -153,16 +157,16 @@ body {
 
 .message {
   padding: 0.5em;
-  margin-left: 0.7em;
   width: fit-content;
   min-width: 20%;
   max-width: 80%;
   border-radius: 10px;
+  margin: 0.3em 0;
 }
 
 #chat-history {
   flex-direction: column;
-  height: 100%;
+  flex: 1;
   border-radius: 20px;
   margin-bottom: 0.5em;
   background-color: var(--chakra-colors-brand-secondary);
@@ -176,7 +180,6 @@ body {
 .hero {
   width: 100%;
   height: 100%;
-  padding: 1em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -254,7 +257,7 @@ h1 {
     width: 100%;
   }
 
-  .chat {
+  .sidebar {
     display: none;
   }
 }
